--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <title>Inicio</title>
+    <link rel="stylesheet" href="/styles/styleIndex.css">
+    <title>Arquitectura</title>
 </head>
-<body>
-    
+<body class="bodyM">
+    <header class="mainheader">
+        <h1>Arquitectura de computadoras</h1>
+    </header>
+    <main class="main">
+        <h2>Bienvenido</h2>
+    </main>
+
+    <aside class="late">
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, velit excepturi facilis tempora explicabo assumenda, minus nesciunt quam natus vel corrupti numquam rerum suscipit veniam labore praesentium odit, accusantium voluptas!</div>
+    </aside>
+   <footer class="foot">
+    <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, repellat incidunt inventore tempora perspiciatis similique quisquam necessitatibus molestiae commodi doloribus dolore, aliquid iste consequuntur dicta. Molestiae doloremque fugiat exercitationem nesciunt!</h3>
+   </footer>
 </body>
+
 </html>
