--- a/index.html
+++ b/index.html
@@ -6,22 +6,57 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <link rel="stylesheet" href="/styles/styleIndex.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Oswald:wght@200..700&display=swap"
+        rel="stylesheet">
     <title>Arquitectura</title>
 </head>
+<style>
+    body {
+        background: url("img/zMarcechavo.png");
+    }
+</style>
+
 <body class="bodyM">
     <header class="mainheader">
-        <h1>Arquitectura de computadoras</h1>
+        <h1 class="titlesOne">Arquitectura de computadoras</h1>
     </header>
-    <main class="main">
-        <h2>Bienvenido</h2>
-    </main>
+    <div class="mainContainer">
 
-    <aside class="late">
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, velit excepturi facilis tempora explicabo assumenda, minus nesciunt quam natus vel corrupti numquam rerum suscipit veniam labore praesentium odit, accusantium voluptas!</div>
-    </aside>
-   <footer class="foot">
-    <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, repellat incidunt inventore tempora perspiciatis similique quisquam necessitatibus molestiae commodi doloribus dolore, aliquid iste consequuntur dicta. Molestiae doloremque fugiat exercitationem nesciunt!</h3>
-   </footer>
+
+        <main class="ContenedorPrinci">
+            <h2 style="color:white; font-size: 33px;">Inicio</h2>
+            <p>Bienvenido a la materia de Arquitectura de Computadoras, donde exploraremos <img src="/img/Bonzi.webp" alt="" class="monito">los conceptos fundamentales  y
+                avanzados de la arquitectura de computadoras. </p>
+        </main>
+
+        <aside class="late">
+            <h2>Unidades</h2>
+            <div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Unidad 1</a></li>
+                        <li><a href="#">Unidad 2</a></li>
+                        <li><a href="#">Unidad 3</a></li>
+                        <li><a href="#">Unidad 4</a></li>
+                        <li><a href="#">Practicas</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </aside>
+    </div>
+    <footer class="foot">
+        <ul>
+            <li><a href="#">Unidad 1</a></li>
+            <li><a href="#">Unidad 2</a></li>
+            <li><a href="#">Unidad 3</a></li>
+            <li><a href="#">Unidad 4</a></li>
+            <li><a href="#">Practicas</a></li>
+        </ul>
+        <img src="/img/Marcechavo.png" alt="">
+    </footer>
 </body>
 
 </html>
