--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/styleIndex.css">
+    <link rel="stylesheet" href="/styles/styleIndex.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -55,7 +55,7 @@
             <li><a href="#">Unidad 4</a></li>
             <li><a href="#">Practicas</a></li>
         </ul>
-        <img src="../img/Marcechavo.png" alt="">
+        <img src="/img/Marcechavo.png" alt="">
     </footer>
 </body>
 
