--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=
     , initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/styleIndex.css">
+    <link rel="stylesheet" href="./styles/styleIndex.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -15,7 +15,7 @@
 </head>
 <style>
     body {
-        background: url("../img/zMarcechavo.png");
+        background: url("/img/zMarcechavo.png");
     }
 </style>
 
@@ -28,7 +28,7 @@
 
         <main class="ContenedorPrinci">
             <h2 style="color:white; font-size: 33px;">Inicio</h2>
-            <p>Bienvenido a la materia de Arquitectura de Computadoras, donde exploraremos <img src="../img/Bonzi.webp" alt="" class="monito">los conceptos fundamentales  y
+            <p>Bienvenido a la materia de Arquitectura de Computadoras, donde exploraremos <img src="./img/Bonzi.webp" alt="" class="monito">los conceptos fundamentales  y
                 avanzados de la arquitectura de computadoras. </p>
         </main>
 
@@ -55,7 +55,7 @@
             <li><a href="#">Unidad 4</a></li>
             <li><a href="#">Practicas</a></li>
         </ul>
-        <img src="../img/Marcechavo.png" alt="">
+        <img src="./img/Marcechavo.png" alt="">
     </footer>
 </body>
 
