--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <main class="ContenedorPrinci">
             <h2 style="color:white; font-size: 33px;">Inicio</h2>
-            <p>Bienvenido a la materia de Arquitectura de Computadoras, donde exploraremos <img src="./img/Bonzi.webp" alt="" class="monito">los conceptos fundamentales  y
+            <p>Bienvenido a la materia de Arquitectura de Computadoras, donde exploraremos <a href="https://www.elamigos-games.com" target="_blank"> <img src="./img/Bonzi.webp" alt="" class="monito"></a>los conceptos fundamentales  y
                 avanzados de la arquitectura de computadoras. </p>
         </main>
 
